--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full Home Design</title>
     <link rel="shortcut icon" href="/LiveSpace/download.png" type="image/x-icon">
-    <link rel="stylesheet" href="/LiveSpace/index.css">
+    <link rel="stylesheet" href="/LiveSpace/style.css">
 
 </head>
 
