--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <div class="top_line">
                 <img class="liv_space"
                     src="https://images.livspace-cdn.com/w:154/h:36/q:50/plain/https://d3gq2merok8n5r.cloudfront.net/livspace-logo-1695931938-nUPhX/livspace-1695932166-AWR5M.svg"
-                    alt="logo" width="150px" height="28px">
+                    alt="logo">
                 <button class="design">GET FREE QUOTE</button>
             </div>
             <div class="differnce_top_liv">
                 <div class="liv_image">
-                    <img src="/LiveSpace/1440x730-1657194139-erPsT.avif" width="100%" height="700px ">
+                    <img class="liv_space2" src="/LiveSpace/1440x730-1657194139-erPsT.avif">
                     <div class="main_description">
                         <div class="description">Bring home beautiful interiors <span class="description_yellow">that
                                 fit
@@ -39,17 +39,14 @@
                         <h2>Designs for Every budget</h2>
                     </div>
                     <input class="name" type="text" placeholder="Name">
-                    <p
-                        style="font-size: 12px; margin-top: 1px; font-family: Arial, Helvetica, sans-serif;color: rgb(235, 89, 95) ">
+                    <p class="enter_name">
                         Please enter your name</p>
                     <input class="phonenumber" type="text" placeholder="Phone number" name="" id="">
                     <input class="checkbox" type="checkbox">
                     <h4 class="whatsapp">Send me updates on WhatsApp</h4>
                     <button class="design2">GET FREE QUOTE</button>
-                    <h4 class="agreement">By submitting this form, you agree to the <span class="privacy"><a href=""
-                                style="color: rgb(235, 89, 95) ; text-decoration: none; font-weight:600;">privacy
-                                policy</a></span> & <span><a href=""
-                                style="color: rgb(235, 89, 95) ; text-decoration: none; font-weight:600;">terms and
+                    <h4 class="agreement">By submitting this form, you agree to the <span ><aclass="privacy" href="">
+                                privacy policy</a></span> & <span class="terms"><a href="">terms and
                                 conditions</a></span>
                     </h4>
                 </div>
@@ -58,15 +55,13 @@
         </div>
         <div class="reasonsWrapper">
             <div class="personilsed_design"><img src="/LiveSpace/personalised-design-60x60-1657526074-fzE3H.png"
-                    style="width: 70px;" alt="">
+                     alt="">
                 <p>Personalised designs</p>
             </div>
-            <div class="Warrenty"><img src="/LiveSpace/10-year-warranty-desktop-1646210954-fh1K8.avif" alt=""
-                    style="width: 70px;">
+            <div class="Warrenty"><img src="/LiveSpace/10-year-warranty-desktop-1646210954-fh1K8.avif" alt="">
                 <p>Flat 10-year warranty</p>
             </div>
-            <div class="transparent"><img src="/LiveSpace/transparent-pricing-desktop-1646210957-nGL2T.avif" alt=""
-                    style="width: 70px;">Transparent pricing</div>
+            <div class="transparent"><img src="/LiveSpace/transparent-pricing-desktop-1646210957-nGL2T.avif" alt="">Transparent pricing</div>
         </div>
         <div class="last_div">
             <div class="last_cont">
