--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="shortcut icon" href="/LiveSpace/download.png" type="image/x-icon">
-    <link rel="stylesheet" href="/LiveSpace/style.css">
+    <link rel="shortcut icon" href="./LiveSpace/download.png" type="image/x-icon">
+    <link rel="stylesheet" href="./LiveSpace/style.css">
     <title>Full Home Design</title>
 
 </head>
@@ -23,7 +23,7 @@
             </div>
             <div class="differnce_top_liv">
                 <div class="liv_image">
-                    <img class="liv_space2" src="/LiveSpace/1440x730-1657194139-erPsT.avif">
+                    <img class="liv_space2" src="./LiveSpace/1440x730-1657194139-erPsT.avif">
                     <div class="main_description">
                         <div class="description">Bring home beautiful interiors <span class="description_yellow">that
                                 fit
@@ -55,14 +55,14 @@
 
         </div>
         <div class="reasonsWrapper">
-            <div class="personilsed_design"><img src="/LiveSpace/personalised-design-60x60-1657526074-fzE3H.png"
+            <div class="personilsed_design"><img src="./LiveSpace/personalised-design-60x60-1657526074-fzE3H.png"
                      alt="" width="70px">
                 <p >Personalised designs</p>
             </div>
-            <div class="Warrenty"><img src="/LiveSpace/10-year-warranty-desktop-1646210954-fh1K8.avif" alt="" width="70px">
+            <div class="Warrenty"><img src="./LiveSpace/10-year-warranty-desktop-1646210954-fh1K8.avif" alt="" width="70px">
                 <p class="">Flat 10-year warranty</p>
             </div>
-            <div class="transparent"><img src="/LiveSpace/transparent-pricing-desktop-1646210957-nGL2T.avif" alt="" width="70px">Transparent pricing</div>
+            <div class="transparent"><img src="./LiveSpace/transparent-pricing-desktop-1646210957-nGL2T.avif" alt="" width="70px">Transparent pricing</div>
         </div>
         <div class="last_div">
             <div class="last_cont">
