--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="differnce_top_liv">
                 <div class="liv_image">
-                    <img class="liv_space2" src="../LiveSpace/1440x730-1657194139-erPsT.avif">
+                    <img class="liv_space2" src="./1440x730-1657194139-erPsT.avif">
                     <div class="main_description">
                         <div class="description">Bring home beautiful interiors <span class="description_yellow">that
                                 fit
