--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 
         </div>
         <div class="reasonsWrapper">
-            <div class="personilsed_design"><img src="../LiveSpace/personalised-design-60x60-1657526074-fzE3H.png"
+            <div class="personilsed_design"><img src="./personalised-design-60x60-1657526074-fzE3H.png"
                      alt="" width="70px">
                 <p >Personalised designs</p>
             </div>
-            <div class="Warrenty"><img src="../LiveSpace/10-year-warranty-desktop-1646210954-fh1K8.avif" alt="" width="70px">
+            <div class="Warrenty"><img src="./10-year-warranty-desktop-1646210954-fh1K8.avif" alt="" width="70px">
                 <p class="">Flat 10-year warranty</p>
             </div>
-            <div class="transparent"><img src="../LiveSpace/transparent-pricing-desktop-1646210957-nGL2T.avif" alt="" width="70px">Transparent pricing</div>
+            <div class="transparent"><img src="./transparent-pricing-desktop-1646210957-nGL2T.avif" alt="" width="70px">Transparent pricing</div>
         </div>
         <div class="last_div">
             <div class="last_cont">
