--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="shortcut icon" href="../LiveSpace/download.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./download.png" type="image/x-icon">
     <title>Full Home Design</title>
 
 </head>
