--- a/index.html
+++ b/index.html
@@ -9,6 +9,170 @@
     <title>Full Home Design</title>
 
 </head>
+<style>
+    @media only screen and (max-width: 600px) {
+
+
+
+
+        body,
+        html {
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+            width: 100%;
+            font-size: 14px;
+        }
+
+
+
+        .details {
+            width: 150px;
+            height: 410px;
+            justify-content: end;
+            align-items: end;
+            margin-top: 10%;
+            margin-right: -10%;
+
+        }
+
+        .reasonsWrapper {
+            padding-left: 0;
+
+        }
+
+        .last_sub_cont {
+            width: 100%;
+            margin: 2% 5%;
+            font-size: small;
+        }
+
+        .last_cont {
+            font-size: small;
+        }
+
+        .last_button {
+            margin: 10%;
+            width: 20%;
+            font-size: small;
+        }
+
+        .designs26 {
+            width: 70%;
+
+        }
+
+
+    }
+
+
+    @media only screen and (min-width: 601px) and (max-width: 1024px) {
+
+
+        .liv_space2 {
+            width: 100%;
+        }
+
+        body,
+        html {
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+            width: 100%;
+            font-size: 16px;
+        }
+
+
+
+        .details {
+            width: 300px;
+            height: 400px;
+            margin-top: 10%;
+        }
+
+        .reasonsWrapper {
+            padding-left: 0;
+
+        }
+
+        .last_sub_cont {
+            width: 100%;
+            margin: 1%;
+            font-size: small;
+        }
+
+        .details {
+            width: 300px;
+            height: 410px;
+            font-size: small;
+            margin-top: 10%;
+            margin-right: -0%;
+            margin-top: 20px;
+
+        }
+
+        .designs26 {
+            width: 70%;
+            padding-right: 7%;
+            text-align: center;
+            margin-left: -20px;
+
+
+        }
+
+        .sub_des {
+            width: 70%;
+        }
+
+        .main_description {
+            width: 60%;
+            padding: 0;
+            margin: 0;
+            top: 150px;
+
+        }
+
+        .description {
+            font-size: 30px;
+        }
+
+        .design2 {
+            font-size: 80%;
+            line-height: 15px;
+
+        }
+
+        .agreement {
+            font-size: small;
+            width: 165px;
+            margin-left: 0;
+        }
+
+        .phonenumber,
+        .phonenumber {
+            width: 100%;
+            height: 15px;
+        }
+
+        .last_button {
+            margin: 5%;
+        }
+
+
+    }
+
+
+    @media only screen and (min-width: 1025px) {
+
+
+        body {
+            font-size: 18px;
+            width: 100%;
+
+        }
+
+    }
+</style>
 
 <body>
     <div class="container">
@@ -35,33 +199,38 @@
                 </div>
 
                 <div class="details">
-                    <div class="detail_heading">
-                        <h2>Designs for Every budget</h2>
+                    <div class=" detail_heading">
+                        <h2 class="designs26">Designs for Every budget</h2>
                     </div>
-                    <input class="name" type="text" placeholder="Name">
+                    <input class="phonenumber" type="text" placeholder="Name">
                     <p class="enter_name">
                         Please enter your name</p>
                     <input class="phonenumber" type="text" placeholder="Phone number" name="" id="">
                     <input class="checkbox" type="checkbox">
                     <h4 class="whatsapp">Send me updates on WhatsApp</h4>
                     <button class="design2">GET FREE QUOTE</button>
-                    <h4 class="agreement">By submitting this form, you agree to the <span ><aclass="privacy" href="">
-                                privacy policy</a></span> & <span class="terms"><a href="">terms and
+                    <h4 class="agreement">By submitting this form, you agree to the <span>
+                            <aclass="privacy" href="">
+                                privacy policy</a>
+                        </span> & <span class="terms"><a href="">terms and
                                 conditions</a></span>
                     </h4>
                 </div>
             </div>
 
         </div>
+
         <div class="reasonsWrapper">
-            <div class="personilsed_design"><img src="./personalised-design-60x60-1657526074-fzE3H.png"
-                     alt="" width="70px">
-                <p >Personalised designs</p>
+            <div class="personilsed_design"><img src="./personalised-design-60x60-1657526074-fzE3H.png" alt=""
+                    width="70px">
+                <p>Personalised designs</p>
             </div>
-            <div class="Warrenty"><img src="./10-year-warranty-desktop-1646210954-fh1K8.avif" alt="" width="70px">
+            <div class="warrenty"><img src="./10-year-warranty-desktop-1646210954-fh1K8.avif" alt="" width="70px">
                 <p class="">Flat 10-year warranty</p>
             </div>
-            <div class="transparent"><img src="./transparent-pricing-desktop-1646210957-nGL2T.avif" alt="" width="70px">Transparent pricing</div>
+            <div class="transparent"><img src="./transparent-pricing-desktop-1646210957-nGL2T.avif" alt="" width="70px">
+                <p>Transparent pricing</p>
+            </div>
         </div>
         <div class="last_div">
             <div class="last_cont">
@@ -70,8 +239,7 @@
             <div class="last_sub_cont">
                 <h4> When you give your home the Livspace touch, you get both beauty and
                     functionality. We employ state-of-the-art technology to ensure your home features a flawless look
-                    that
-                    lasts a very long time.
+                    that lasts a very long time.
                 </h4>
             </div>
             <div class="last_button">Book Free Consultation</div>
